# LkGui

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
LkGui/src/: .clang-tidy  CMakeLists.txt  main.c
LkGui/src/LkGui/: LkGui.c  LkGui.h  LkGui_Draw.c  LkGui_Internal.h
LkGui/src/LkGui/Backends/: CMakeLists.txt  LkGui_Impl_Base.h  LkGui_Impl_Glfw.c  LkGui_Impl_Glfw.h  LkGui_Impl_OpenGL3.c  LkGui_Impl_OpenGL3.h  LkGui_Impl_OpenGL4.c  LkGui_Impl_OpenGL4.h  LkGui_impl_base.h  LkGui_impl_glfw.c  LkGui_impl_glfw.h  LkGui_impl_opengl4.c  LkGui_impl_opengl4.h
LkGui/src/LkGui/Core/: Base.h  CMakeLists.txt  Context.c  Context.h  Logger.c  Logger.h  PlatformDetection.h
assets/shaders/: basic_transform.shader  outline.shader  simple.shader
build-LkGui/: CMakeCache.txt  LkGui  cmake_install.cmake  qtcsettings.cmake
build-LkGui/.cmake/api/v1/reply/: cache-v2-14fc7a6fdc28fc9a8e88.json  cmakeFiles-v1-603b22ff44f1b1b25120.json  codemodel-v2-64b6c1b0be9a22c6cae2.json  directory-.-Debug-d3bd3ebcdc4b20b3de1f.json  index-2023-10-07T13-29-19-0134.json  target-LkGui-Debug-9d3f4108fa06b066d564.json  target-glfw-Debug-c1652cd620f1a4f30508.json
build-LkGui/.qtc_clangd/: compile_commands.json
build-LkGui/.qtc_clangd/.cache/clangd/index/: Base.h.24200EB97E307E70.idx  Logger.c.811D70EEE1DEFF7C.idx  (+119 more)
build-LkGui/lib/: cmake_install.cmake
build-LkGui/lib/glad/: cmake_install.cmake
build-LkGui/lib/glfw/: cmake_install.cmake
build-LkGui/lib/glfw/src/: cmake_install.cmake
cmake/: FindGLFW3.cmake
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glfw/: CMakeLists.txt
(+16 files in other folders)
